# task1

./: README.md
CMake_Test/: CMakeLists.txt
CMake_Test/common/: CMakeLists.txt
CMake_Test/modules/: CMakeLists.txt
CMake_Test/modules/A2/include/: A2.h
task-1-2/: task2-1.sh
task-1-2/linux_practice/docs/: daily_report.txt
